# 6502Emulator

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  deploy-docs.yml
cmake/: sanitizers.cmake  warnings.cmake
emulator-application/: CMakeLists.txt
emulator-application/include/emulator/app/: Emulator.h
emulator-application/src/: Emulator.cpp  Main.cpp
emulator-components/: CMakeLists.txt
emulator-components/include/emulator/components/: AbstractComponent.h  Editor.h  HEXDisplay.h  LEDs.h  MemoryLayout.h  PixelDisplay.h  SevenSegmentDisplay.h  SwitchPanel.h
emulator-components/src/: Editor.cpp  HEXDisplay.cpp  LEDs.cpp  MemoryLayout.cpp  Pixel.cpp  PixelDisplay.cpp  SevenSegmentDisplay.cpp  SwitchPanel.cpp
emulator-core/: CMakeLists.txt
emulator-core/include/emulator/core/: Assembler.h  CPU6502.h  Disassembler.h  Instruction.h  Memory.h  SoftwareLoader.h
emulator-core/src/: Assembler.cpp  CPU6502.cpp  Disassembler.cpp  Memory.cpp  SoftwareLoader.cpp
emulator-core/tests/cpu/: ADCTests.cpp  ANDTests.cpp  ASLTests.cpp  BITTests.cpp  CLCTests.cpp  CLDTests.cpp  CLITests.cpp  CLVTests.cpp  CMPTests.cpp  CPXTests.cpp  CPYTests.cpp  DECTests.cpp  DEXTests.cpp  DEYTests.cpp  EORTests.cpp  INCTests.cpp  INXTests.cpp  INYTests.cpp  LDATests.cpp  LDXTests.cpp  LDYTests.cpp  NOPTests.cpp  ORATests.cpp  ROLTests.cpp  RORTests.cpp  SECTests.cpp  SEDTests.cpp  SEITests.cpp  STATests.cpp  STXTests.cpp  STYTests.cpp  TAXTests.cpp  TAYTests.cpp  TSXTests.cpp  TXATests.cpp  TXSTests.cpp  TYATests.cpp
emulator-core/tests/memory/: MemoryTests.cpp
emulator-shared/: CMakeLists.txt
emulator-shared/include/emulator/shared/: Assert.h  Logger.h
emulator-utilities/: CMakeLists.txt
emulator-utilities/include/emulator/utilities/: ColorsUtil.h  ProgramUtil.h  RandomUtil.h
emulator-utilities/src/: ColorUtils.cpp  ProgramUtil.cpp  RandomUtil.cpp
emulator-utilities/tests/: ColorUtilTests.cpp
src/: Main.cpp
src/App/: Emulator.cpp  Emulator.h
src/Assembler/: Assembler.cpp  Assembler.h
src/Components/: AbstractComponent.h
src/Components/Editor/: Editor.cpp  Editor.h
src/Components/HEXDisplay/: HEXDisplay.cpp  HEXDisplay.h
src/Components/LEDs/: LEDs.cpp  LEDs.h
src/Components/MemoryLayout/: MemoryLayout.cpp  MemoryLayout.h
src/Components/PixelDisplay/: Pixel.cpp  Pixel.h  PixelDisplay.cpp  PixelDisplay.h
src/Components/SwitchPanel/: SwitchPanel.cpp  SwitchPanel.h
src/Core/: Assembler.cpp  Assembler.h  CPU6502.cpp  CPU6502.h  Memory.cpp  Memory.h
src/Disassembler/: Dissasembler.cpp  Dissasembler.h
src/SoftwareLoader/: SoftwareLoader.cpp  SoftwareLoader.h
src/Types/: Flags.h  Instruction.h  Pixel.cpp  Pixel.h
src/Util/: ColorUtils.cpp  ColorsUtil.h  Logger.h  ProgramUtil.cpp  ProgramUtil.h  RandomUtil.cpp  RandomUtil.h  TimeUtil.h
tests/: CMakeLists.txt
tests/cpu/: ADCTests.cpp  ANDTests.cpp  ASLTests.cpp  BITTests.cpp  CLCTests.cpp  CLDTests.cpp  CLITests.cpp  CLVTests.cpp  CMPTests.cpp  CPXTests.cpp  CPYTests.cpp  DECTests.cpp  DEXTests.cpp  DEYTests.cpp  EORTests.cpp  INCTests.cpp  INXTests.cpp  INYTests.cpp  LDATests.cpp  LDXTests.cpp  LDYTests.cpp  NOPTests.cpp  ORATests.cpp  ROLTests.cpp  RORTests.cpp  SECTests.cpp  SEDTests.cpp  SEITests.cpp  STATests.cpp  STXTests.cpp  STYTests.cpp  TAXTests.cpp  TAYTests.cpp  TSXTests.cpp  TXATests.cpp  TXSTests.cpp  TYATests.cpp
tests/util/: ProgramUtilTests.cpp
